--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,23 @@
 .validated {
   border: solid 1px green;
 }
+
+.pictures-wrapper {
+  max-width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+}
+
+.picture {
+  display: inline-block;
+  margin: 5px;
+  padding: 10px 20px;
+  border: solid 1px #ccc;
+}
+
+.picture a {
+  display: block;
+}
