create popup with YUI

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,3 +25,10 @@
 .picture a {
   display: block;
 }
+
+.popup {
+  border: solid 1px #ccc;
+  display: inline-block;
+  padding: 50px;
+  opacity: 0;
+}
