add some styles to YUI popup

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,9 +26,33 @@
   display: block;
 }
 
+#popupContainer {
+  opacity: 0;
+}
+
 .popup {
+  background: #fff;
   border: solid 1px #ccc;
   display: inline-block;
+  box-shadow: 0 5px 10px #9e9e9e;
   padding: 50px;
-  opacity: 0;
+  position: fixed;
+  z-index: 100;
+  max-width: 600px;
+  min-width: 300px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.popup-background {
+  background: #ccc;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0.9;
 }
