--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,25 @@
 body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
+  background: #ff6c2c;
+  color: #616161;
+}
+
+input[type="button"] {
+  background: #ff6c2c;
+  border: none;
+  padding: 10px 20px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  color: #fff;
+  border: solid 2px #ff6c2c;
+  transition: all 0.2s ease;
+}
+
+input[type="button"]:hover {
+  background: #fff;
+  color: #ff6c2c;
+  border: solid 2px #ff6c2c;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -8,9 +27,7 @@ body {
 /* -------------------------------------------------------------------------- */
 
 #registrationform {
-  padding-top: 50px;
   min-height: 100vh;
-  background: #ff9800;
 }
 
 #registrationform h1, #registrationform h2 {
@@ -114,15 +131,33 @@ form input:focus {
 /* -------------------------------------------------------------------------- */
 /*  Part 2  */
 /* -------------------------------------------------------------------------- */
+
+#mainPage {
+  background: #fff;
+  margin: 0 50px;
+  box-shadow: 0 5px 10px #bf360c;
+  margin-bottom: 50px;
+  padding-bottom: 50px;
+}
+
 #popupContainer {
   opacity: 0;
+}
+
+.wrapper {
+  display: flex;
+}
+
+#part2, #part3 {
+  width: 50%;
+  margin: 50px;
 }
 
 .popup {
   background: #fff;
   border: solid 1px #ccc;
   display: inline-block;
-  box-shadow: 0 5px 10px #9e9e9e;
+  box-shadow: 0 5px 10px #212121;
   padding: 50px;
   position: fixed;
   z-index: 100;
@@ -135,7 +170,7 @@ form input:focus {
 }
 
 .popup-background {
-  background: #ccc;
+  background: #555;
   position: fixed;
   top: 0;
   right: 0;
@@ -148,6 +183,12 @@ form input:focus {
 /* -------------------------------------------------------------------------- */
 /*  Part 4  */
 /* -------------------------------------------------------------------------- */
+
+#part4 {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
 .pictures-wrapper {
   max-width: 80%;
   margin: 0 auto;
@@ -159,9 +200,10 @@ form input:focus {
 
 .picture {
   display: inline-block;
-  margin: 5px;
+  margin: 10px;
   padding: 10px 20px;
   border: solid 1px #ccc;
+  box-shadow: 0 5px 10px #ccc;
 }
 
 .picture a {
