--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,12 @@ form input:focus {
   color: #4caf50;
 }
 
+#submit_btn:disabled {
+  background: #ccc;
+  color: #9e9e9e;
+  border-color: #ccc;
+}
+
 #feedback {
   font-size: 0.8em;
   color: #f44336;
@@ -146,11 +152,13 @@ form input:focus {
 
 .wrapper {
   display: flex;
+  flex-wrap: wrap;
 }
 
 #part2, #part3 {
+  box-sizing: border-box;
   width: 50%;
-  margin: 50px;
+  padding: 50px;
 }
 
 .popup {
@@ -208,4 +216,14 @@ form input:focus {
 
 .picture a {
   display: block;
+}
+
+/* -------------------------------------------------------------------------- */
+/*  Responsive  */
+/* -------------------------------------------------------------------------- */
+
+@media screen and (max-width: 768px) {
+  #part2, #part3 {
+    width: 100%;
+  }
 }
